<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="413dp"
            android:layout_height="97dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/appbar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="248dp"
            android:layout_height="33dp"
            android:layout_marginTop="112dp"
            android:text="@string/judul_form"
            android:textColor="#424242"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="405dp"
            android:layout_height="108dp"
            android:layout_marginTop="156dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/group_733" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="284dp"
            android:text="@string/jenis_tes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="287dp"
            android:text="@string/harus_isi"
            android:textColor="@color/button"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="308dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="125dp"
                android:layout_height="23dp"
                android:text="@string/rapid" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="125dp"
                android:layout_height="23dp"
                android:text="@string/pcr" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="372dp"
            android:text="@string/tanggal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="373dp"
            android:text="@string/harus_isi"
            android:textColor="@color/button"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.427"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="396dp"
            android:ems="10"
            android:inputType="text"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="440dp"
            android:text="@string/nik"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="444dp"
            android:text="@string/harus_isi"
            android:textColor="@color/button"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="460dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="504dp"
            android:text="@string/nama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="508dp"
            android:text="@string/harus_isi"
            android:textColor="@color/button"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNama"
            android:layout_width="217dp"
            android:layout_height="39dp"
            android:layout_marginTop="524dp"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="568dp"
            android:text="@string/tanggal_lahir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="568dp"
            android:text="@string/harus_isi"
            android:textColor="@color/button"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTanggalLahir"
            android:layout_width="211dp"
            android:layout_height="44dp"
            android:layout_marginTop="596dp"
            android:ems="10"
            android:focusable="true"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="644dp"
            android:text="@string/jenis_kelamin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="648dp"
            android:text="@string/harus_isi"
            android:textColor="@color/button"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/jeniskelamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="676dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonCowo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laki"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="600dp" />

            <RadioButton
                android:id="@+id/radioButtonCewe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perem"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="658dp" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="780dp"
            android:text="@string/hubungan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="780dp"
            android:text="@string/harus_isi"
            android:textColor="@color/button"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupRelationship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="804dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonOrtu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ortu"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="723dp" />

            <RadioButton
                android:id="@+id/radioButtonSuamIs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suamis"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="778dp" />

            <RadioButton
                android:id="@+id/radioButtonAnak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anak" />

            <RadioButton
                android:id="@+id/radioButtonLainnya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kerabat" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBoxAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/persetujuan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupRelationship" />

        <Button
            android:id="@+id/button"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:text="@string/selanjutnya"
            android:backgroundTint="@color/button"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="1060dp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/checkBoxAgreement"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="184dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/editTextTanggal"
            app:layout_constraintTop_toTopOf="@+id/editTextTanggal"
            app:layout_constraintVertical_bias="0.4"
            app:srcCompat="@drawable/baseline_calendar_today_24" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="184dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTanggalLahir"
            app:layout_constraintStart_toStartOf="@+id/editTextTanggalLahir"
            app:layout_constraintTop_toTopOf="@+id/editTextTanggalLahir"
            app:layout_constraintVertical_bias="0.55"
            app:srcCompat="@drawable/baseline_calendar_today_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
